<resources>
    <string name="app_name">ECommerceApp</string>

    <!--DialogsHelpers-->
    <string name="ok_text">OK</string>
    <string name="cancel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter amount</string>
    <string name="error_empty_field">Empty field, please insert a valid value</string>
    <string name="failed_add_item">Failed to add item, please try again later</string>
    <string name="select_brand">Please choose a Brand</string>
    <string name="concatenate_product">%1$s %2$s</string>
    <string name="product_of">Products of </string>
    <string name="failed_get_data">Error al obtener la data</string>
    <string name="continue_shop">Seguir comprando</string>
    <string name="verify">Verificar</string>
    <string name="decline">Cancelar</string>
    <string name="pay_paypal">Pagar %1$s con PayPal ahora!</string>
    <string name="currency_usd">USD</string>
    <string name="kotlin_store">Tienda online en Kotlin</string>
    <string name="sorry">Lo sentimos!</string>
    <string name="something_went_wrong">Algo salio mal, intente nuevamente</string>
    <string name="login">Ingresar</string>
    <string name="sign_up">Registrarse</string>
    <string name="request_email">Por favor ingrese su correo electronico</string>
    <string name="request_password">Ingrese su contrasena</string>
    <string name="request_username">Por favor introduzca su nombre de usuario</string>
    <string name="request_confirm_password">Ingrese nuevamente su contrasena</string>
    <string name="message">Informacion</string>
    <string name="password_mismatch">Las contrasenas con concuerdan</string>
    <string name="thanks">Gracias por su compra</string>

</resources>
